@@ -7,6 +7,7 @@ import service.serializedClasses.*;
 
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
@@ -41,36 +42,45 @@ public class ServerHandler extends ChannelInboundHandlerAdapter {
             return;
         } else if ("uploadFile".equals(responseText)) {
             UploadFileResponse uploadFileResponse = (UploadFileResponse) response;
-
             try {
+                System.out.println(uploadFileResponse.getLocalPath());
                 Path path = Path.of(uploadFileResponse.getLocalPath());
-                FileOutputStream fos = new FileOutputStream(path.toString());
-                fos.write(uploadFileResponse.getFile());
-                fos.close();
+                if (uploadFileResponse.getFileInfo().getType().getName().equals("D")){
+                    Files.createDirectories(path);
+                } else {
+                    FileOutputStream fos = new FileOutputStream(path.toString());
+                    fos.write(uploadFileResponse.getFile());
+                    fos.close();
+                }
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
-            controller.getLocalPC().updateList(Path.of(uploadFileResponse.getLocalPath()).getParent());
+            controller.getLocalPC().updateList(Paths.get(controller.getLocalPC().getCurrentPath()));
             return;
         } else if ("moveFile".equals(responseText)) {
             MoveFileResponse moveFileResponse  = (MoveFileResponse ) response;
 
             try {
+                System.out.println(moveFileResponse.getLocalPath());
                 Path path = Path.of(moveFileResponse.getLocalPath());
-                FileOutputStream fos = new FileOutputStream(path.toString());
-                fos.write(moveFileResponse.getFile());
-                fos.close();
+                if (moveFileResponse.getFileInfo().getType().getName().equals("D")){
+                    Files.createDirectories(path);
+                } else {
+                    FileOutputStream fos = new FileOutputStream(path.toString());
+                    fos.write(moveFileResponse.getFile());
+                    fos.close();
+                }
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
-            controller.getLocalPC().updateList(Path.of(moveFileResponse.getLocalPath()).getParent());
-            ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), getPathWithoutFile(moveFileResponse.getServerPath())));
+            controller.getLocalPC().updateList(Paths.get(controller.getLocalPC().getCurrentPath()));
+            ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), controller.getServerPC().getCurrentPath()));
             return;
         } else if ("delFile".equals(responseText)) {
-            ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), getPathWithoutFile(((DelFileResponse) response).getServerPath())));
+            ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), controller.getServerPC().getCurrentPath()));
             return;
         } else if ("sendFile".equals(responseText)) {
-            ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), getPathWithoutFile(((SendFileResponse) response).getServerPath())));
+            ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), controller.getServerPC().getCurrentPath()));
             return;
         }
     }
